[gd_scene load_steps=2 format=3 uid="uid://xbuiv4iwh862"]

[ext_resource type="Script" path="res://Menus/Scripts/Menu.gd" id="1_7dh84"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7dh84")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -34.0
offset_right = 34.0
offset_bottom = 26.0
grow_horizontal = 2
text = "BERSERK"

[node name="Container" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -134.0
offset_top = -183.0
offset_right = -87.9999
offset_bottom = -117.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(5.92, 4.68)
alignment = 1
vertical = true

[node name="Start" type="Button" parent="Container"]
layout_mode = 2
size_flags_vertical = 2
focus_neighbor_bottom = NodePath("../Quit")
action_mode = 0
keep_pressed_outside = true
text = "Start"

[node name="Quit" type="Button" parent="Container"]
layout_mode = 2
size_flags_vertical = 10
focus_neighbor_top = NodePath("../Start")
text = "Quit"

[connection signal="gui_input" from="Container/Start" to="." method="_on_start_gui_input"]
[connection signal="pressed" from="Container/Start" to="." method="_on_button_pressed"]
[connection signal="gui_input" from="Container/Quit" to="." method="_on_quit_gui_input"]
